--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
           window.open('https://adwebcomicagency.vercel.app/');
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
